numpy/typing/tests/data/reveal/ctypeslib.py
import numpy as np

reveal_type(np.ctypeslib.c_intp())  # E: {c_intp}
